--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  box-sizing: border-box;
+  background: linear-gradient(135deg, #b24, #f62) fixed;
+}
